// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ATOMIZE RULESET ## NATIVE ## 01 (null) 1`] = `null`;

exports[`ATOMIZE RULESET ## NATIVE ## 02 ({}) 1`] = `null`;

exports[`ATOMIZE RULESET ## NATIVE ## 03 ([null, undefined, {}]) 1`] = `null`;

exports[`ATOMIZE RULESET ## NATIVE ## 04 ({ color: 'red', margin: 0 }) 1`] = `
Array [
  Array [
    "color: red /*.*/",
    "margin: 0 /*.*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 05 ([{ color: 'red' }, { margin: 0 }]) 1`] = `
Array [
  Array [
    "color: red /*.[0]*/",
  ],
  Array [
    "margin: 0 /*.[1]*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 06 (...$web: { color: 'green' }, $native: { color: 'blue' }) 1`] = `
Array [
  Array [
    "color: red /*.[0]*/",
  ],
  Array [
    "color: blue /*.[2]*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 07 atomizeRuleset(atomizeRuleset({color: 'red' 1`] = `
Array [
  Array [
    "color: red /*.*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 08 atomizeRuleset({$web: atomizeRuleset({ :hover color: 'red', $native: atomizeRuleset({ color: 'green' 1`] = `
Array [
  Array [
    "color: green /*.*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 11 with theme 1`] = `
Array [
  Array [
    "color: white /*.[0]*/",
    "backgroundColor: darkgreen /*.[0]*/",
  ],
  Array [
    "color: black /*.[2]*/",
    "backgroundColor: lightblue /*.[2]*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 12 ATOMIZE modifies source object 1`] = `
Array [
  Array [
    "color: blue /*.*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 12 ATOMIZE modifies source object 2`] = `
Object {
  "$native": Object {
    "color": "green",
  },
  "$web": Object {
    "color": "red",
  },
  "color": "blue",
}
`;

exports[`ATOMIZE RULESET ## WEB ## 01 (null) 1`] = `null`;

exports[`ATOMIZE RULESET ## WEB ## 02 ({}) 1`] = `null`;

exports[`ATOMIZE RULESET ## WEB ## 03 ([null, undefined, {}]) 1`] = `null`;

exports[`ATOMIZE RULESET ## WEB ## 04 ({ color: 'red', margin: 0 }) 1`] = `
Array [
  Array [
    ".a { color:red /*.*/ }",
    ".b { margin:0 /*.*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 05 ([{ color: 'red' }, { margin: 0 }]) 1`] = `
Array [
  Array [
    ".a { color:red /*.[0]*/ }",
  ],
  Array [
    ".b { margin:0 /*.[1]*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 06 (...$web: { color: 'green' }, $native: { color: 'blue' }) 1`] = `
Array [
  Array [
    ".a { color:red /*.[0]*/ }",
  ],
  Array [
    ".b { color:green /*.[1]*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 07 atomizeRuleset(atomizeRuleset({color: 'red' 1`] = `
Array [
  Array [
    ".a { color:red /*.*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 08 atomizeRuleset({$web: atomizeRuleset({ :hover color: 'red', $native: atomizeRuleset({ color: 'green' 1`] = `
Array [
  Array [
    ".a:hover { color:red /*./:hover*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 11 with theme 1`] = `
Array [
  Array [
    ".a { color:white /*.[0]*/ }",
    ".b { background-color:darkgreen /*.[0]*/ }",
  ],
  Array [
    ".c { color:black /*.[1]*/ }",
    ".d { background-color:lightblue /*.[1]*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 12 ATOMIZE modifies source object 1`] = `
Array [
  Array [
    ".a { color:blue /*.*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 12 ATOMIZE modifies source object 2`] = `
Object {
  "$native": Object {
    "color": "green",
  },
  "$web": Object {
    "color": "red",
  },
  "color": "blue",
}
`;

exports[`ATOMIZE RULESET ## WEB ## 13 condition in pseudo 1`] = `
Array [
  Array [
    ".a:hover { color:red /*./:hover*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 14 mix in pseudo array 1`] = `
Array [
  Array [
    ".c { color:green /*.*/ }",
  ],
  Array [
    ".a:hover { color:blue /*./:hover[0]*/ }",
  ],
  Array [
    ".b:hover:active { color:red /*./:hover[1]/:active*/ }",
  ],
]
`;
